--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -51,8 +51,8 @@
 							  	<ul class="dropdown-menu">
 							    	<li><a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video Embed' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-comments-o"></i> {% trans 'Forum' %}</a></li>
-							    	<li><a href="#"><i class="fa fa-file-archive-o"></i> {% trans 'File Link' %}</a></li>
-							    	<li><a href="{% url 'webpages:create' topic.slug %}"><i class="fa fa-file-o"></i> {% trans 'Webpage' %}</a></li>
+							    	<li><a href="{% url 'file_links:create' topic.slug %}"><i class="fa fa-file-archive-o"></i> {% trans 'File Link' %}</a></li>
+							    	<li><a href="{% url 'webpages:create' topic.slug %}"><i class="fa fa-file-code-o"></i> {% trans 'Webpage' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-question-circle-o"></i> {% trans 'Questionary' %}</a></li>
 							  	</ul>
 							</div>
