--- a/file_link/templates/file_links/_form.html
+++ b/file_link/templates/file_links/_form.html
@@ -253,7 +253,7 @@
 					{% endif %}
             	</div>
 
-            	<p><em>{% trans 'Attribute students to webpage' %}:</em></p>
+            	<p><em>{% trans 'Attribute students to file link' %}:</em></p>
             	{% render_field form.students class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.students.help_text }}</span>
@@ -273,7 +273,7 @@
 
             	<br clear="all" />
 
-            	<p><em>{% trans 'Attribute groups to webpage' %}:</em></p>
+            	<p><em>{% trans 'Attribute groups to file link' %}:</em></p>
             	{% render_field form.groups class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.groups.help_text }}</span>
