--- a/topics/templates/resources/list.html
+++ b/topics/templates/resources/list.html
@@ -20,7 +20,7 @@
 				</h4>
 
 				{% if has_subject_permissions %}
-					<div class="pull-right category-card-items">
+					<div class="pull-right topic-card-items">
 		                <a><i class="fa fa-arrows" aria-hidden="true"></i></a>
 		                <span class="btn-group pull-right">
 			                <button class="btn btn-sm btn_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
