--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -19,7 +19,7 @@
                         </a>
                     </h4>
 
-                    <div class="col-md-5 pull-right subject-card-items">
+                    <div class="col-md-5 pull-right category-card-items">
                         {% if has_subject_permissions %}
                             <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
