no subscribe button finished

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -589,6 +589,11 @@ a:focus {
 .subscribe-subject {
     border:none;
 }
+
+.no-subscribe-btn{
+    background-color: #BDBDBD !important;
+    color: #F5F5F5 !important;
+}
 /* subjects app ends */
 
 /* Themes */
