--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -21,7 +21,7 @@ a:focus {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    text:center;
+    text-align:center;
 }
 .users-cloud li {
     list-style: none;
