--- a/subjects/templates/subjects/list.html
+++ b/subjects/templates/subjects/list.html
@@ -1,7 +1,7 @@
 {% extends 'categories/home.html' %}
 
 {% load static i18n pagination %}
-{% load django_bootstrap_breadcrumbs subject_counter %}
+{% load django_bootstrap_breadcrumbs subject_counter category_counters %}
 
 {% block javascript%}
     {{ block.super }}
@@ -79,10 +79,14 @@
                                                     <a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')" aria-hidden="true"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
                                                 </ul>
                                             {% endif %}
-                                            <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                                            <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                                            <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                                            <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                                            
+                                            <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                                            <a href="" class="pull-right action_icon">
+                                                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                                                {% notifies_cat_number category %}
+                                            </a>
+                                            <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                            <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
