--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -36,10 +36,13 @@
                        
                         
 
-                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon">
+                            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                            {% notifies_number subject %}
+                        </a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
