--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -39,7 +39,7 @@
                         <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
                         <a href="" class="pull-right action_icon">
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-                            {% notifies_number subject %}
+                            {% notifies_number subject request.user %}
                         </a>
                         <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                         <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
