--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -1,6 +1,6 @@
 {% extends 'categories/home.html' %}
 
-{% load static i18n pagination permissions_tags %}
+{% load static i18n pagination permissions_tags subject_counter %}
 {% load django_bootstrap_breadcrumbs %}
 
 {% block javascript%}
@@ -55,10 +55,13 @@
                                 <li><a href="javascript:delete_subject.get('{% url 'subjects:delete' subject.slug %}?view=index','#subject','#modal_subject')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                             </ul>
                         {% endif %}
-                        <a href=""><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                        <a href="" ><i class="fa fa-list" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon">
+                            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                            {% notifies_number subject request.user %}
+                        </a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="" class="pull-right action_icon"><i class="fa fa-list" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
