--- a/amadeus/templates/pagination.html
+++ b/amadeus/templates/pagination.html
@@ -1,5 +1,5 @@
 {% if paginator.count > 0 %}
-	<div class="row-fluid">
+	<div class="row">
 		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
 		  	<ul class="pagination">
 		  		{% if page_obj.has_previous %}
