--- a/subjects/templates/subjects/subject_card.html
+++ b/subjects/templates/subjects/subject_card.html
@@ -37,7 +37,7 @@
                         
 
                         <a href="" class="pull-right action_icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></a>
-                        <a href="" class="pull-right action_icon">
+                        <a href="{% url 'notifications:view' subject.slug %}" class="pull-right action_icon">
                             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                             {% notifies_number subject request.user %}
                         </a>
