--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -34,7 +34,7 @@
 		                </div>
 		            </div>
 		        </div>
-			    <div id="{{topic.slug}}" class="panel-collapse collapse category-panel-content topic-panel">
+			    <div id="{{topic.slug}}" class="panel-collapse collapse category-panel-content">
 			    	<input type="hidden" class="id_inp" name="id" value="{{ topic.id }}" />
 			    	<input type="hidden" class="order_inp" name="order" value="{{ topic.order }}" />
 
