--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -39,6 +39,7 @@
                             <h2 class="outside-title"><strong> {% trans 'Sign in with your account to continue' %} </strong></h2>
                         </div>
                     </div>
+                    <div class="row">
                     <form id="form-login" method="post" action="">
                         {% csrf_token %}
                         <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
@@ -51,7 +52,28 @@
                                 <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
                             </div>
                         </div>
+                   
                     </form>
+                    </div>
+                     <li class="dropdown language-selector"> 
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
+                            <img src="{% static "img/brazilicon.png" %}" />
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="active">
+                              <a href="#">
+                                <img src="{% static "img/brazilicon.png" %}" />
+                                <span>{% trans "PT-BR" %}</span>
+                              </a>
+                            </li>
+                            <li >
+                              <a href="#">
+                                <img src="{% static "img/euaicon.png" %}" />
+                                <span>{% trans "EN" %}</span>
+                              </a>
+                            </li>
+                        </ul>
+                    </li>
                     <div class="row">
                         <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
                             {% if not deny_register %}
