--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -55,6 +55,7 @@
 							    	<li><a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video Embed' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-comments-o"></i> {% trans 'Forum' %}</a></li>
 							    	<li><a href="{% url 'file_links:create' topic.slug %}"><i class="fa fa-file-archive-o"></i> {% trans 'File Link' %}</a></li>
+							    	<li><a href="#" > <i class="fa fa-globe"></i> {% trans "Link to Website" %}</a>
 							    	<li><a href="{% url 'webpages:create' topic.slug %}"><i class="fa fa-file-code-o"></i> {% trans 'Webpage' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-question-circle-o"></i> {% trans 'Questionary' %}</a></li>
 							  	</ul>
